@@ -16,8 +16,8 @@
       = t(:added_by, :time_ago => time_ago_in_words(account.created_at), :user => (account.user.id == @current_user.id ? t(:me) : h(account.user.full_name)))
     - unless @current_user.preference[:accounts_outline] == "brief"
       %dt
-        = link_to(account.website, account.website.to_url) << " | " if account.website?
-        = link_to(account.email, "mailto:" << account.email.to_s) << " | " if account.email?
+        = link_to(account.website, account.website.to_url) << " | " if account.website.present?
+        = link_to_email(account.email) << " | " if account.email.present?
         = t(:phone_small) << ": " << (account.toll_free_phone || account.phone) << " | " if account.toll_free_phone? || account.phone?
         = t('pluralize.contact', account.contacts.count) << " | "
         = t('pluralize.opportunity', account.opportunities.count)
