@@ -4,6 +4,11 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Wed, May 5, 2010
+---------------------------------------------------------------------
+- Added migration to have index on permissions (thanks, Yura!)
+- Added link_to_email to Bcc: to dropbox if it has been set up (closes LH #183).
+
 Thu, Apr 29, 2010
 ---------------------------------------------------------------------
 - Replaced Facebox with Modalbox (closes LH #170).
